# rust-operator-catalog-rebuild

./: .gitignore  Cargo.toml  README.md  filter-config.yaml  rebuild-catalog.sh
.config/: config.toml
src/: main.rs
src/api/: schema.rs
src/auth/: credentials.rs
src/catalog/: rebuild.rs
src/config/: read.rs
src/image/: copy.rs
src/log/: logging.rs
src/manifests/: files.rs
test/: index.json
