[package]
name = "rust-operator-catalog-rebuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
serde_with = "*"
base64 = { version = "0.21"}
futures = { version = "0.3"}
clap = { version = "4.2.4", features = ["derive"] }
serde_yaml = "0.9.21"
crate = "0.0.2"
create = "0.1.0"
sha256 = "1.2.2"
flate2 = "1.0.26"
tar = "0.4.39"
